# hello_libpd

./: CMakeLists.txt  DrumMachine.pd  README.md  capi.cpp  cppapi.cpp  libpd-miniaudio.cpp
